--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -44,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://tomerbourstein.github.io/food-app"
+  "homepage": "https://tomerbourstein.github.io/food-app",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
